# dofimak

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
dockerfilemaker/: __init__.py  dockerfilemaker.py
dockerfilemaker/specifications/: qml2_docker.docker_spec
dofimak/: __init__.py  dependencies.py  dofimak.py  passwd_checked_pip.py  utils.py
dofimak/specifications/: __init__.py  base_dockerfile_commands.txt  containers_wconda.txt  import_functions.py  qml2_docker.docker_spec
examples/create_dockerfile/: build_docker_image.sh  make_docker_file.py  prepare_docker_creation.sh  run_docker_image.sh  test_qml2_run.py
examples/from_miniconda/: prepare_docker_creation.sh  pyscf_docker.docker_spec  qml2_docker.docker_spec
examples/from_private/: build_docker_image.sh  prepare_docker_creation.sh  qml2-dev_docker.docker_spec  run_docker_image.sh
