[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "dockerfilemaker"
version = "0.0.1"
authors=[
 {name="Konstantin Karandashev"},
]
description="Convenient dockerfile creation"
readme="README.md"
license={text="MIT License"}
[tool.setuptools]
packages=[
  "dockerfilemaker",
]
