[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "dofimak"
version = "0.0.1"
authors=[
 {name="Konstantin Karandashev"},
]
description="Convenient dockerfile creation"
dependencies=["click"]
readme="README.md"
license={text="MIT License"}
[tool.setuptools]
packages=[
  "dofimak",
  "dofimak.specifications"
]
[tool.setuptools.package-data]
dofimak = ["*/*.txt", "*/*.docker_spec"]
[project.scripts]
dofimak_make_pcpip="dofimak.passwd_checked_pip:create_passwd_checked_pip_install"
dofimak="dofimak.dofimak:main"
