[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 61.0",
]

[project]
authors = [
    { name = "Konstantin Karandashev" },
]
dependencies = [
    "click",
    "packaging",
    "tomli",
    "tomli-w",
]
description = "Convenient dockerfile creation"
name = "dofimak"
readme = "README.md"
version = "0.0.5"

[project.license]
text = "MIT License"

[project.scripts]
dofimak = "dofimak.dofimak:main"
dofimak_make_pcpip = "dofimak.passwd_checked_pip:create_passwd_checked_pip_install"

[tool.setuptools]
packages = [
    "dofimak",
    "dofimak.specifications",
]

[tool.setuptools.package-data]
dofimak = [
    "*/*.docker_spec",
    "*/*.txt",
]
